--- a/HTML+CSS/lab3/2.html
+++ b/HTML+CSS/lab3/2.html
@@ -11,11 +11,12 @@
             height: 250px;
             margin: auto;
             border: dotted rgb(0, 255, 221);
-        }
-        h1 {
+            box-sizing: border-box;
         }
         p {
+            width: 100%;
             padding: 20px;
+            box-sizing: border-box;
             border: 5px solid blue;
         }
     </style>
