--- a/HTML+CSS/lab4/5.html
+++ b/HTML+CSS/lab4/5.html
@@ -19,117 +19,165 @@
         }
 
         .cards-layout {
-            display: flex;
-            gap: 20px;
+            margin-bottom: 40px;
         }
 
-        .masonry {
-            flex-wrap: wrap;
-            align-items: flex-start;
+        .cards-layout.masonry {
+            column-count: 3;
             column-gap: 20px;
         }
 
-        .masonry .card {
-            width: 200px;
+        .cards-layout.masonry .card {
+            break-inside: avoid;
             margin-bottom: 20px;
         }
 
-        .flex {
+        .cards-layout.flex {
+            display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            gap: 20px;
+            justify-content: center;
         }
 
-        .flex .card {
+        .cards-layout.flex .card {
             width: 200px;
-            margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
         }
 
         .card {
             background-color: white;
-            padding-bottom: 10px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
             border-radius: 6px;
+            overflow: hidden;
             box-sizing: border-box;
         }
 
         .card img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
-            border-radius: 4px;
+            display: block;
         }
 
         .card h3 {
             margin: 10px 0 5px;
             font-size: 1em;
-            padding: 0 10px;
+            padding: 20px 20px 0  20px;
+            font-weight: normal;
         }
 
         .card p {
-            padding: 0 10px;
+            padding: 0 20px 20px;
             font-size: 0.875em;
             margin: 0;
+            line-height: 1.5;
+        }
+        .line {
+            width: 100%;
+            min-height: 2px;
+            background-color: rgb(238, 238, 238);
+            margin-bottom: 20px;
+            margin-top: auto;
         }
     </style>
 </head>
 <body>
-
 <h2>Layout Masonry</h2>
 <div class="cards-layout masonry">
-    <div class="card">
+    <div class="card"> 
         <img src="./5/images/image1.jpg" alt="">
-        <h3>Заголовок</h3>
-        <p>Описание карточки с текстом.</p>
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
     </div>
     <div class="card">
         <img src="./5/images/image2.jpg" alt="">
-        <h3>Заголовок</h3>
-        <p>Текст короче.</p>
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+        <p>More interesting things about the thing</p>
     </div>
     <div class="card">
         <img src="./5/images/image3.jpg" alt="">
-        <h3>Заголовок</h3>
-        <p>Больше текста внутри карточки, чтобы показать разницу в высоте.</p>
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
     </div>
     <div class="card">
         <img src="./5/images/image4.jpg" alt="">
-        <h3>Заголовок</h3>
-        <p>Пример разной высоты.</p>
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+        <p>More interesting things about the thing</p>
     </div>
     <div class="card">
-        <img src="./5/images/image4.jpg" alt="">
-        <h3>Заголовок</h3>
-        <p>Пример разной высоты.</p>
+        <img src="./5/images/image2.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
     </div>
     <div class="card">
-        <img src="./5/images/image4.jpg" alt="">
-        <h3>Заголовок</h3>
-        <p>Пример разной высоты.</p>
+        <img src="./5/images/image3.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
     </div>
 </div>
 
 <h2>Layout Flex</h2>
 <div class="cards-layout flex">
     <div class="card">
-        <img src="https://picsum.photos/id/201/200/150" alt="">
-        <h3>Заголовок</h3>
-        <p>Описание карточки с текстом.</p>
+        <img src="./5/images/image1.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
+
     </div>
     <div class="card">
-        <img src="https://picsum.photos/id/202/200/100" alt="">
-        <h3>Заголовок</h3>
-        <p>Текст короче.</p>
+        <img src="./5/images/image2.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
+
     </div>
     <div class="card">
-        <img src="https://picsum.photos/id/203/200/200" alt="">
-        <h3>Заголовок</h3>
-        <p>Больше текста внутри карточки, чтобы показать разницу в высоте.</p>
+        <img src="./5/images/image3.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
+
     </div>
     <div class="card">
-        <img src="https://picsum.photos/id/204/200/130" alt="">
-        <h3>Заголовок</h3>
-        <p>Пример разной высоты.</p>
+        <img src="./5/images/image4.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
+
+    </div>
+    <div class="card">
+        <img src="./5/images/image2.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
+
+    </div>
+    <div class="card">
+        <img src="./5/images/image3.jpg" alt="">
+        <h3>Card Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur possimus quo enim eveniet, deserunt ducimus doloremque laudantium iure, ut inventore eaque fugit ex porro totam perspiciatis molestiae corporis. Odio!</p>
+        <div class="line"></div>
+<p>More interesting things about the thing</p>
+
     </div>
 </div>
-
 </body>
 </html>
