--- a/JS/lab5/index.html
+++ b/JS/lab5/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color: black;
-        }
-    </style>
+    <title>Title</title>
 </head>
 <body>
-    <script src="./labs.js"></script>
+<script src="labs.js"></script>
 </body>
 </html>
